--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ img {
   border: 1px solid slategrey;
 }
 
+h2 {
+  text-align: center;
+  text-decoration: underline;
+}
+
 ul {
   border-radius: 10px;
   border: 1px solid black;
