--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ img {
 h2 {
   text-align: center;
   text-decoration: underline;
+  margin-top: 0;
 }
 
 ul {
@@ -24,15 +25,17 @@ li {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 #results {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 #chartDiv {
-  width: 500px;
-  height: 500px;
+  margin-top: 150px;
+  width: 700px;
+  height: 700px;
 }
