--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Global Selectors */
 img {
   max-width: 25%;
   max-height: 280px;
@@ -23,6 +24,7 @@ li {
   padding: 3px;
 }
 
+/* ID Containers */
 #imageContainer {
   display: flex;
   justify-content: space-evenly;
